--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <meta name="google-site-verification" content="0p5JxMJHk9I4a83GQU8_MnYcPDeNgPubbZTFxgpGfJE" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Los constantes apagones en Ecuador han afectado a la sociedad en general, impactando especialmente a sectores vulnerables, empresas y estudiantes.">
